Fixed project buttons, and nav toggle menu icon
- Aligned project icon buttons to center
- Fixed toggle menu icon not showing properly due to CSS class name not matching with the HTML class given

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,30 +59,29 @@ ul {
   color: var(--black);
 }
 .menu a:hover {
-  background-color: var(--gray);
+  background-color: transparent;
+  color: var(--gray);
 }
 .nav {
   max-height: 0;
   transition: max-height 0.5s ease-out;
 }
 
-/* Menu Icon */
+/* -- Menu Icon -- */
 .hamburger {
   cursor: pointer;
   float: right;
   padding: 40px 20px;
-}
+} /* Style label tag */
 
-/* Style label tag */
 .hamburger-line {
   background: var(--black);
   display: block;
   height: 2px;
   position: relative;
   width: 24px;
-}
+} /* Style span tag */
 
-/* Style span tag */
 .hamburger-line::before,
 .hamburger-line::after {
   background: var(--black);
@@ -104,7 +103,7 @@ ul {
   display: none;
 } /* Hide checkbox */
 
-/* Toggle menu icon */
+/* -- Toggle menu icon -- */
 .side-menu:checked ~ nav {
   max-height: 100%;
 }
@@ -115,10 +114,35 @@ ul {
   transform: rotate(-45deg);
   top: 0;
 }
-.side-menu:checked ~ .hamburger .hamb-line::after {
+.side-menu:checked ~ .hamburger .hamburger-line::after {
   transform: rotate(45deg);
   top: 0;
 }
+
+/* ----- Responsiveness ----- */
+
+@media (min-width: 768px) {
+  .nav {
+    max-height: none;
+    top: 0;
+    position: relative;
+    float: right;
+    width: fit-content;
+    background-color: transparent;
+  }
+  .menu li {
+    float: left;
+  }
+  .menu a:hover {
+    background-color: transparent;
+    color: var(--gray);
+  }
+
+  .hamburger {
+    display: none;
+  }
+}
+
 /* ------- HEADINGS ------- */
 
 .heading-1 {
@@ -227,16 +251,25 @@ ul {
   flex: 1;
 }
 
+.div-block-case-study {
+  margin-left: 0px;
+  align-self: center;
+  flex: 1;
+  text-align: center;
+}
+
 .project-info-container-right {
   flex-direction: column;
 }
 
 .button-label {
-  margin: 4px;
+  margin-right: 4px;
+  margin-bottom: 8px;
+  margin-left: 4px;
   padding: 4px 16px;
   border-radius: 20px;
   background-color: #f1f2f6;
-  transition: none;
+  transition-property: none;
   font-family: "sofia-pro", sans-serif;
   color: #898ea2;
   font-size: 14px;
@@ -265,28 +298,38 @@ ul {
 
 /* ------- FOOTER ------- */
 
-.social-media-icon {
-  margin-right: 20px;
-  margin-left: 20px;
-}
-
 .footer-wrap {
-  margin-top: 80px;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  display: flex;
+  margin-top: 100px;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 80px 50px;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f1f2f6;
 }
 
 .footer-links {
-  flex-direction: column;
-}
-
-.footer-item {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 0px;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  clear: none;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  align-self: center;
+  flex: 0 auto;
+  grid-auto-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
 }
 
 .w-inline-block {
   max-width: 100%;
   display: inline-block;
+}
+
+.social-media-icon {
+  margin-right: 20px;
+  margin-left: 20px;
 }
